--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -44,19 +44,19 @@
               <li>There are no fees charged for tickets sales, allowing you to try out potential events without taking on any risk. Have a go, you really have nothing to lose.</li><br>
               <li>When you are satisifed that a show is properly funded, you can request payment. Sales monies are deposited into your bank account seven days after you make the request, minus 100 Motel's and Stripe's fees which are non-refundable.</li><br>
               <li>We provide you with a mobile application, Doorman, for tracking admissions on the night of the show. </li> <br>
-              <li>By using 100 Motels you agree to abide by the rules of service which are primarily in the interest of the artists. We reserve the right to refund all your ticket sales and/or suspend your account if you fail to do so.</li>
+              <li>By using 100 Motels you agree to abide by the rules of the service which are primarily in the interest of the artists. We reserve the right to refund all your ticket sales and/or suspend your account if you fail to do so.</li>
             </ul>
         </div>
         <a href="#">Back to top</a>
 
         <div class="featurette">
           <div class="page-header"><h1 class="featurette-heading" id="artist"><span class="muted">Artists</span></h1></div>
-          <p class="lead"><strong>100 Motels <em>raison d'etre</em> is to help you play more shows, at home and away.</strong> My own belief is that for you to reach your full artistic potential you need to be able to concentrate on writing, recording and performing - not easy for an independent. 100 Motels reflects that belief, here's all you can do: </p>
+          <p class="lead"><strong>100 Motels <em>raison d'etre</em> is to help you play more shows, at home and away.</strong> My own belief is that for you to reach your full artistic potential you need to be able to concentrate on writing, recording and performing - not easy for an independent. 100 Motels reflects that belief, here is all you can do: </p>
           <ul class="lead">
               <li>First off add some media (a video or soundcloud playlist showcasing your work) to your user account. You need this to make <a href="#requests">show requests.</a></li><br>
-              <li>If you're looking to go on tour, browse the Organizer listings for that location. When you find someone suitable click the <a href="#requests">request tour</a> button.</li><br>
-              <li>If you're looking to support another Artist touring your city, click the <a href="#requests">request support</a> button on that event's homepage.</li><br>
-              <li>You probably already have fans that are waiting for you to play their hometown. They can sign up for an Organizer account and have a go at funding your event that way.</li><br>
+              <li>If you're looking to go on tour, browse the organizer listings for that location. When you find someone suitable click the <a href="#requests">request tour</a> button.</li><br>
+              <li>If you're looking to support another artist touring your city, click the <a href="#requests">request support</a> button on that event's homepage.</li><br>
+              <li>You probably already have fans that are waiting for you to play their hometown. They can sign up for an organizer account and have a go at funding an event for you.</li><br>
             </ul>
           <p class="lead">You'll need to figure out a sales target and a timeframe with your organizer. Your next involvement after that, assuming the show is funded successfully, will be on stage.  </p>
         </div>
@@ -64,13 +64,13 @@
 
         <div class="featurette">
           <div class="page-header"><h1 class="featurette-heading" id="organizing"><span class="muted">Organizing a Show</span></h1></div>
-          <p class="lead"><strong>100 Motels gives everyone the chance to organize a live show for any artist of their choosing.</strong> There are no minimum requirments for the type of venue, crowd-size or equipment/production standards. As long as the artist is happy, we're happy. Here's what's involved: </p>
+          <p class="lead"><strong>100 Motels gives everyone the chance to organize a live show for any artist of their choosing.</strong> There are no minimum requirements for the type of venue, crowd-size or equipment/production standards. As long as the artist is happy, we're happy. Here's what's involved: </p>
           <ul class="lead">
-              <li>Before you start you need to establish a baseline cost for your events. Some expenses will vary by show (travel costs), others will be relatively predictible (venue/equipment hire, accommodation). Check out your <%= link_to "public profile", profiles_path %> for a guideline on what you need to consider and personalise it as you see fit.</li><br>
-              <li>In terms of funding - how much of costs you look to cover with ticket sales, how profits are split, how expenses are paid - these decisions are entirely up to you and the artist.</li><br>
-              <li>You can draw down sales monies to your bank account anytime you like, but once you do you bear the financial risk of refunds, chargebacks and cancellations. Don't do this until you're sure the show will go ahead! </li><br>
-              <li>All sales monies are deposited in your bank account, seven days after they are requested.</li><br>
-              <li>You are required to organize transport and accommodation for the artist.</li><br>
+              <li>Before you start you need to establish a baseline cost for your events. Some expenses will vary by show (travel costs), others will be relatively predictible (venue/equipment hire, accommodation). Check out other <%= link_to "public profiles", profiles_path %> for a guideline on what you need to consider and personalise your own as you see fit.</li><br>
+              <li>How much of costs you look to cover with ticket sales, how profits are split, how expenses are paid - these decisions are entirely between you and the artist.</li><br>
+              <li>You can draw down sales monies to your bank account whenever you like, but once you do you bear the financial risk of refunds, chargebacks and cancellations. Don't do this until you're sure the show will go ahead. </li><br>
+              <li>All sales monies are deposited in your bank account seven days after they are requested.</li><br>
+              <li>You are required to organize transport and accommodation for the visiting artist.</li><br>
               <li>You, or someone acting on your behalf, are required to meet the artists when they arrive and look after them until they depart. </li><br>
             </ul>
             <p class="lead">We reserve the right to cancel an event and refund all customers if our terms and conditions are not observed. Our aim is to protect artists and customers while respecting your right to profit from the show. Organizers who misuse the service will bear the cost of customer refunds and will be prohibited from organizing shows in the future.</p>
@@ -104,7 +104,7 @@
           <div class="page-header">
            <div class="page-header"> <h1 class="featurette heading"><span class="muted">Requests</span></h1></div>
             <p class="lead">
-              <strong>Artists in general, have to do way too much.</strong> Especially leading up to a big show you don't want to distract from the performance. So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
+              <strong>Artists in general, have to do way too much.</strong> So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
             </p>
             <ul class="lead">
               <li>Sign up for a normal user account and then add 'artist media' on the settings page. You can add a vimeo, youtube or soundcloud playlist here.</li><br>
