--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,7 +16,7 @@
 				<% unless user_signed_in? %>
 						<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: ""}) do |f| %>
 						  <%= f.error_notification %>
-
+						  	<%= f.input :guest_id, as: :hidden, input_html: { value: @guest.id } %>
 						    <%= f.input :email, as: :hidden, input_html: { value: @order.email } %>
 					      <%= f.input :password, wrapper: :prepend, required: true, label: false, html: { class: ""} do %>
 						      <%= f.input_field :password, placeholder: "enter a password" %>
