got rid of unnecessary stuff on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 			<div class="section-box" id="opener">
 				<div class="navbar">
-					<div id="welcome-nav" class="navbar-inner" align="center">
+					<!-- <div id="welcome-nav" class="navbar-inner" align="center">
 	  				<div class="label-box"><del>Alpha</del> Demo!!</div>
 	  				<a class="brand">Click One >></a>
 						<ul class="nav">
@@ -11,7 +11,7 @@
 		  				<li class="span2"><a href="#promoter-apply">Organize</a></li>
 		  				<li class="span3"><%= link_to "100 Motels? ", info_path %></li>
 						</ul>
-					</div> <!-- /inner nav -->
+					</div> --> <!-- /inner nav -->
 					<div class="jumbotron">
 						<h1 class="welcome-banner">
 						 100 Motels<br>
@@ -203,7 +203,7 @@
 				<hr>
 			</section>
 
-			<section id="promoter-apply">
+			<!-- <section id="promoter-apply">
 				<div class="well well-large">
 					<header><h3 class="lead">So Who Organizes the Show?</h3></header>
 					<div class="row-fluid">
@@ -240,7 +240,7 @@
 						<hr>
 					</div>
 				</div>
-			</section>
+			</section> -->
 		</div>
 		<!-- MODAL FOR ORGANIZER -->
 		<div class="modal hide fade" id="invite" tabindex="-1" role="dialog" aria-hidden="true">
