--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 					<div class="jumbotron">
 						<h1 class="welcome-banner">
 						 100 Motels<br>
-						 <small>100 Motels is an idea I have to help independent musicians like myself get out on tour without industry backing or paying to play.</small>
+						 <small>Funding, Ticketing, Organization for Live Music.</small>
 						</h1>
 					</div>
 				</div> <!-- /navbar -->
@@ -23,19 +23,19 @@
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>Funding</h2>
-	          <p>100 Motels lets you fund a potential show without taking on any financial liability. When you're happy enough money has been raised, you can draw it down.</p><br>
+	          <p>Fund a live show without incurring fees or charges. When you're happy you have the numbers, we'll get your money.</p><br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "money"), class: "btn" %></p>
 	        </div>
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
-	          <h2>Organizing</h2>
-	          <p>Everything you would expect of a modern ticketing platform. Hassle free purchases, barcoded tickets and a mobile app 'Doorman' for keeping track of things on the night.</p> <br>
+	          <h2>Ticketing</h2>
+	          <p>A modern ticketing platform with one-click purchases, QR coded tickets and a mobile app 'Doorman' for keeping track of things on the night.</p> <br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "organizing"), class: "btn" %></p>
 	        </div>
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
-	          <h2>Touring</h2>
-	          <p>Anyone can organize a tour date for the artist of their choosing. Artists can find organizers for a location where they have fans or find support slots for other shows. </p><br>
+	          <h2>Organizing</h2>
+	          <p>Organize a live show for the artist or artists of your choosing. Find an organizer to put on a show for you or play as support for other artists. </p><br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "how"), class: "btn" %></p>
 	        </div>
 				</div> <!-- /headlines -->
