more revamping of info page

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -61,20 +61,30 @@
 
 // info
 
-#intro {
-  img  {
-    // padding-bottom: 20px;
-    margin-bottom: 20px;
-  }
-}
+// #intro {
+//   img  {
+//     // padding-bottom: 20px;
+//     margin-bottom: 20px;
+//   }
+//   margin-bottom: 30px;
+// }
 
 .featurette {
   padding-top: 30px;
 }
 
-.zappa {
-  h1  {
-    padding-top: 30px;
-    padding-bottom: 20px;
-  }
+// .zappa {
+//   h1  {
+//     padding-top: 30px;
+//     padding-bottom: 20px;
+//   }
+// }
+
+#side-menu  {
+  margin-top: 25px;
+}
+
+.copyright  {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
