--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
               <li class=""><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
               <li><%= link_to "Organizers", profiles_path %></li>
-              <li><%= link_to "Help &Info", info_path %></li>
+              <li><%= link_to "Info", info_path %></li>
               <li><%= render 'events/search' %></li>
             </ul>
             <ul class="nav pull-right topbar">
