--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 					<div class="jumbotron">
 						<h1 class="welcome-banner">
 						 100 Motels<br>
-						 <small>Funding, Ticketing, Organization for Live Music.</small>
+						 <small>Funding, Ticketing, Organizing, Live Music.</small>
 						</h1>
 					</div>
 				</div> <!-- /navbar -->
@@ -23,7 +23,7 @@
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>Funding</h2>
-	          <p>Fund a live show without incurring fees or charges. When you're happy you have the numbers, we'll get your money.</p><br>
+	          <p>Fund a live show without incurring fees or charges. When you're happy with the numbers get your money.</p><br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "money"), class: "btn" %></p>
 	        </div>
 					<div class="span4">
