--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,6 +1,11 @@
 <div class="container">
+  <div class="row">
+    <div class="span10 offset2" id="">
+          <h1 class="">Hi, I'm Seosamh. <span class="muted">I developed 100 Motels. </span><a href="//seocahill.com"><img src="//www.gravatar.com/avatar/fd4e9587dd4e9696fecfa8b47f5d6c77.png" class="img-circle"></a></h1>
+    </div>
+  </div>
   <div class="row-fluid">
-    <div class="span3" style="position: abolute; top:30px;">
+    <div class="span3" id="side-menu">
         <ul class="nav nav-list well" >
           <li class="nav-header">About the Founder</li>
 
@@ -18,118 +23,69 @@
     </div> <!-- /span3 -->
     <div class="span9">
       <!-- 100 Motels poster -->
-      <section id="intro">
-        <div class="zappa">
-          <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
-            <p class="pull-right img-circle">
-              <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
-            </p>
-            <br>
-          <h1>Hi, I'm Seosamh. <span class="muted">I developed 100 Motels.</span></h1>
-          <p class="lead">My experience in music with <a href="//creteboom.com">my own band</a> inspired me to try and change some things. </p>
-          <p class="lead">My music has been listened to by more than a million people in ninety countries spread over five continents, but I've only ever played outside of my home city twice. 100 Motels is my attempt to fix that. </p>
-          <p class="lead">If you're curious about my background, my thoughts on music, web development or anything else check out <a href="//seocahill.com">my blog</a>.  </p>
-        </div>
-      </section>
-      <hr>
-      <!-- The Big IDea -->
-      <!-- <div class="container marketing"> -->
-
-        <!-- START THE FEATURETTES -->
-
-        <div class="featurette">
-          <div class="page-header"><h1 class="featurette-heading" id="how"><span class="muted">How it Works</span></h1></div>
-          <ul class="lead">
-              <li>Before you can organize a show, we need to verify your identity. We do this through our payments provider, <a href="//stripe.com">Stripe</a>, with whom you must register.</li><br>
-              <li>There are no fees charged for tickets sales, allowing you to try out potential events without taking on any risk. Have a go, you really have nothing to lose.</li><br>
-              <li>When you are satisifed that a show is properly funded, you can request payment. Sales monies are deposited into your bank account seven days after you make the request, minus 100 Motel's and Stripe's fees which are non-refundable.</li><br>
-              <li>We provide you with a mobile application, Doorman, for tracking admissions on the night of the show. </li> <br>
-              <li>By using 100 Motels you agree to abide by the rules of the service which are primarily in the interest of the artists. We reserve the right to refund all your ticket sales and/or suspend your account if you fail to do so.</li>
-            </ul>
-        </div>
-        <a href="#">Back to top</a>
-
-        <div class="featurette">
-          <div class="page-header"><h1 class="featurette-heading" id="artist"><span class="muted">Artists</span></h1></div>
-          <p class="lead"><strong>100 Motels <em>raison d'etre</em> is to help you play more shows, at home and away.</strong> My own belief is that for you to reach your full artistic potential you need to be able to concentrate on writing, recording and performing - not easy for an independent. 100 Motels reflects that belief, here is all you can do: </p>
-          <ul class="lead">
-              <li>First off add some media (a video or soundcloud playlist showcasing your work) to your user account. You need this to make <a href="#requests">show requests.</a></li><br>
-              <li>If you're looking to go on tour, browse the organizer listings for that location. When you find someone suitable click the <a href="#requests">request tour</a> button.</li><br>
-              <li>If you're looking to support another artist touring your city, click the <a href="#requests">request support</a> button on that event's homepage.</li><br>
-              <li>You probably already have fans that are waiting for you to play their hometown. They can sign up for an organizer account and have a go at funding an event for you.</li><br>
-            </ul>
-          <p class="lead">You'll need to figure out a sales target and a timeframe with your organizer. Your next involvement after that, assuming the show is funded successfully, will be on stage.  </p>
-        </div>
-        <a href="#">Back to top</a>
-
-        <div class="featurette">
-          <div class="page-header"><h1 class="featurette-heading" id="organizing"><span class="muted">Organizing a Show</span></h1></div>
-          <p class="lead"><strong>100 Motels gives everyone the chance to organize a live show for any artist of their choosing.</strong> There are no minimum requirements for the type of venue, crowd-size or equipment/production standards. As long as the artist is happy, we're happy. Here's what's involved: </p>
-          <ul class="lead">
-              <li>Before you start you need to establish a baseline cost for your events. Some expenses will vary by show (travel costs), others will be relatively predictible (venue/equipment hire, accommodation). Check out other <%= link_to "public profiles", profiles_path %> for a guideline on what you need to consider and personalise your own as you see fit.</li><br>
-              <li>How much of costs you look to cover with ticket sales, how profits are split, how expenses are paid - these decisions are entirely between you and the artist.</li><br>
-              <li>You can draw down sales monies to your bank account whenever you like, but once you do you bear the financial risk of refunds, chargebacks and cancellations. Don't do this until you're sure the show will go ahead. </li><br>
-              <li>All sales monies are deposited in your bank account seven days after they are requested.</li><br>
-              <li>You are required to organize transport and accommodation for the visiting artist.</li><br>
-              <li>You, or someone acting on your behalf, are required to meet the artists when they arrive and look after them until they depart. </li><br>
-            </ul>
-            <p class="lead">We reserve the right to cancel an event and refund all customers if our terms and conditions are not observed. Our aim is to protect artists and customers while respecting your right to profit from the show. Organizers who misuse the service will bear the cost of customer refunds and will be prohibited from organizing shows in the future.</p>
-        </div><br>
-        <a href="#">Back to top</a>
 
 
+      <div class="section-box" id="intro">
+        <div class="label-box">100 Motels?</div>
+        <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
+        <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
+      </div>
 
-        <div class="featurette" id="attending">
-          <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
-          <div class="page-header"><h1 class="featurette-heading"> <span class="muted">Attending a Show</span></h1></div>
-          <p class="lead">Here's what you need to know. </p>
-          <ul class="lead">
-            <li>You can buy tickets with or without signing up for a user account.</li><br>
-            <li>Your card may not be charged immediately depending on whether the event has reached its funding target.</li><br>
-             <li>Your tickets are emailed to you when your card is charged.</li><br>
-             <li>You are free to cancel your order up and until tickets are issued for the show.</li><br>
-             <li>You don't have to print anything, the barcoded email receipt on your phone is your ticket. </li><br>
-             <li>If the event is cancelled for some reason, you get a refund of the full ticket price.</li><br>
-           </ul>
-           <p class="lead">Signing up for a user account enables you to:</p>
-            <ul class="lead">
-              <li>Track your order history</li><br>
-              <li>Save a credit card for one click purchases</li><br>
-              <li>Add <a href="#artist">artist services</a>.</li><br>
-            </ul>
-        </div><br>
-        <a href="#">Back to top</a>
+      <div class="section-box">
+        <div class="label-box">Why?</div>
+          <p class="">My experience with <a href="//creteboom.com">my own band</a> inspired me to try and change some things to make for a happier life for musicians. </p>
+          <p class="">My music has been listened to by more than a million people in ninety countries spread over five continents, but I've only ever played outside of my home city twice. 100 Motels is my attempt to fix that. </p>
+          <p class="">Check out this <a href="//seocahill.com">blog post</a> for more.  </p>
+      </div>
 
-        <div class="featurette" id="requests">
-          <div class="page-header">
-           <div class="page-header"> <h1 class="featurette heading"><span class="muted">Requests</span></h1></div>
-            <p class="lead">
-              <strong>Artists in general, have to do way too much.</strong> So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
-            </p>
-            <ul class="lead">
-              <li>Sign up for a normal user account and then add 'artist media' on the settings page. You can add a vimeo, youtube or soundcloud playlist here.</li><br>
-              <li>You will see a 'Request Support' button at the top of every individual event page, click it and the organizer will recieve your request to play as a <strong>support act</strong> for that event along with your supplied media and contact details.</li><br>
-              <li>Likewise if you are browsing organizer profiles with a view to going on tour, you will see a "Request Tour" button. Again the organizer will receive your media and contact details. </li><br>
-            </ul>
-            <p class="lead"> You can track the status of you requests and/or cancel them on your user account page.</p>
-          </div>
+      <div class="section-box">
+        <div class="label-box">Who is it for?</div>
+          <p class="">Personally, I want to live a full and satisfying artistic life without having to deal with the industry (<a href="//seocahill.com">more in this blog post</a>). 100 Motels was developed in that context.</p>
+          <p>However this doesn't preclude anyone from using it who still wants to operate inside the industry - independent or commercial artists, promoters, venue-owners, labels, record-stores, radio-stations, journalists or regular civilians. </p>
+          <p>There are no arbitrary rules like you'll see on other funding websites.</p>
+      </div>
+
+      <div class="section-box">
+        <div class="label-box">How do I use 100 Motels?</div>
+        <p>If you want to be an Organizer you need to have an account with <a href="//stripe.com">Stripe</a>, our payments processor. </p>
+        <p>Organizers have an administrative area where they create events, view ticket sales and check for artist requests (see next section).</p>
+        <p>If you're crowdfunding an event, you can rack up as many sales as you feel you need, before charging your customers. Sales monies are deposited in your account 7 days after you make the charge, minus Stripe and 100 Motels fees.</p>
+        <p>We also provide a free cross-platform mobile app for scanning tickets and keeping track of admissions on the night of the show.</p>
+        <br>
           <a href="#">Back to top</a>
-        </div>
+      </div>
 
-        <div class="featurette" id="money">
-          <div class="page-header"><h1 class="featurette-heading"><span class="muted">Fees and Charges</span></h1><br></div>
-          <div class="lead">
-            <p>100 Motels uses Stripe's payment infrastructure to operate a marketplace for organizers, artists and their customers. </p>
-            <p>Each organizer must connect their 100 Motels accounts with Stripe in order to accept cash for their events. This is a simple process and a normal checking account will suffice.</p>
-            <p>When an organizer decides to draw down money from their ticket sales, they are paid directly into their bank account minus Stripe's fees (2.9% + 30c per transaction) and 100 Motel's fee (undetermined but crowdfunding services tend to charge between 5% and 7% currently). These fees are non-refundable. </p>
-            <p>Organizers are currently restricted to holders of <strong>American or Canadian</strong> bank accounts. Unfortunately there is no service comparable to Stripe available outside of North America at the present time.</p>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
+      <div class="section-box" id="artist">
+        <div class="label-box">Artists and requests</div>
+        <p class="">Musicians are tormented by overlapping and often unnecessary web presences in my experience. The only thing we ask of our artist-users, other than an email and password, is to add a music playlist (youtube and vimeo are supported) to their account.</p>
+        <p>The playlist is used in the <strong>request</strong> system (click the request button at the top of an Event or Organizer page).</p>
+        <p>When you make a request the Organizer receives a private message with your details. If they like your playlist they can email you about setting up a show or about a support slot depending on what you're looking to do.</p>
         <a href="#">Back to top</a>
-        <!-- /END THE FEATURETTES -->
-      <!-- </div> -->
+      </div>
+
+      <div class="section-box" id="attending">
+        <div class="label-box">Buying a Ticket</div>
+        <p>You can buy tickets with or without signing up for a user account.</p>
+        <p>Your may not be charged immediately depending on whether the event has reached its funding target.</p>
+        <p>Your tickets are emailed to you when your card is charged.</p>
+        <p>You are free to cancel your order up and until tickets are issued for the show.</p>
+        <p>You don't have to print anything, the Organizer will admit you by scanning the ticket-email on your phone. </p>
+        <p>If the event is cancelled for some reason, you get a refund of the full ticket price.</p>
+        <br>
+          <a href="#">Back to top</a>
+      </div>
+
+      <div class="section-box" id="money">
+        <div class="label-box">Fees and Charges</div>
+        <div class="">
+          <p>100 Motels uses Stripe's payment infrastructure to operate a marketplace for organizers, artists and their customers. </p>
+          <p>Each organizer must connect their 100 Motels accounts with Stripe in order to accept cash for their events. This is a simple process and a normal checking account will suffice.</p>
+          <p>When an organizer decides to draw down money from their ticket sales, they are paid directly into their bank account minus <a href="https://stripe.com/us/help/pricing">Stripe's fees</a> (2.9% + 30c per transaction) and 100 Motel's fee (higher of $50 or 5%). These fees are non-refundable. </p>
+          <p>Organizers are currently restricted to holders of <strong>American or Canadian</strong> bank accounts. Unfortunately there is no service comparable to Stripe Apps outside of North America at the present time.</p>
+        </div><br>
+        <a href="#">Back to top</a>
+      </div>
+
     </div><!--/span-->
   </div><!--/row-->
   <hr>
