--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -137,7 +137,7 @@
 					<% end %>
 
 				</h3>
-					<h3>Help the show...</h3>
+					<h3>Share...</h3>
 				<div class="well">
 						<span class='st_sharethis_large' displayText='ShareThis'></span>
 						<span class='st_facebook_large' displayText='Facebook'></span>
